[Update] public_root 初期ページ

--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -1,2 +1,6 @@
 <% provide(:title,  "ユーザー") %>
-<h1><%= 'ユーザーTOP' %></h1>
+<div class="wrapper">
+    <div class="page-header clear-filter" filter-color="blue">
+    </div>
+</div>
+
