--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -2,5 +2,9 @@
 <div class="wrapper">
     <div class="page-header clear-filter" filter-color="blue">
     </div>
+    
+    
+    <%= render "rss" %>
+    
 </div>
 
