--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -1,10 +1,8 @@
 <% provide(:title,  "ユーザー") %>
+<%= javascript_pack_tag 'rss_react' %>
+
 <div class="wrapper">
     <div class="page-header clear-filter" filter-color="blue">
     </div>
-    
-    
-    <%= render "rss" %>
-    
 </div>
 
