[Update] scssのフォルダを整理

--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title,  "ユーザー") %>
-<%= javascript_pack_tag 'rss_react' %>
 
 <div class="wrapper">
     <div class="page-header clear-filter" filter-color="blue">
     </div>
+
+    <h1>test</h1>
 </div>
 
