[Update] News Release部分を追加

--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -1,9 +1,41 @@
 <% provide(:title,  "ユーザー") %>
 
-<div class="wrapper">
-    <div class="page-header clear-filter" filter-color="blue">
-    </div>
+<div class="wrapper index-page">
+  <!--TopPage Header-->
+  <div class="page-header clear-filter" filter-color="blue">
+      <div class="page-header clear-filter" filter-color="orange">
+        <div class="page-header-image" data-parallax="true" style="background-image:url('/assets/public/Top/header.jpg');">
+        </div>
+        <div class="container">
+          <div class="content-center brand">
+            <h1 class="h1-seo">LABONITY</h1>
+            <div class="welcome-text">
+              <h3>Let's connect with the world through your research.</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
-    <h1>test</h1>
+  <!--News Release-->
+  <div class="container">
+    <div class="row news">
+      <h4>News Release</h4>
+      <div class="btn-show">
+        <button class="btn btn-primary btn-round btn-sm", onclick="scrollToDownload()">一覧を見る</button>
+      </div>
+      <table class="table">
+        <tr>
+          <th>LABONITY 開設のお知らせ</th>
+          <td>2021/09/08</td>
+        </tr>
+        <tr>
+          <th>LABONITY 開設のお知らせ2</th>
+          <td>2021/09/08</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
 </div>
 
