--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,5 @@
 <!-- Navbar -->
+<div  class="sidebar-collapse">
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
     <div class="container">
       <div class="navbar-translate">
@@ -26,15 +27,21 @@
               <a class="dropdown-item" href="./index.html">
                 <i class="now-ui-icons business_chart-pie-36"></i> All components
               </a>
-              <a class="dropdown-item" target="_blank" href="https://demos.creative-tim.com/now-ui-kit/docs/1.0/getting-started/introduction.html">
+              <a class="dropdown-item" target="_blank" href="#">
                 <i class="now-ui-icons design_bullet-list-67"></i> Documentation
               </a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-neutral" href="https://www.creative-tim.com/product/now-ui-kit-pro" target="_blank">
+          <li class="nav-item ">
+            <a class="nav-link btn btn-neutral btn-sm btn-login" href="#">
               <!--<i class="now-ui-icons arrows-1_share-66"></i>-->
-              <p>Upgrade to PRO</p>
+              <p>SIGNUP</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link btn btn-neutral btn-sm btn-login" href="#">
+              <!--<i class="now-ui-icons arrows-1_share-66"></i>-->
+              <p>LOGIN</p>
             </a>
           </li>
 
@@ -42,4 +49,5 @@
       </div>
     </div>
   </nav>
-  <!-- End Navbar -->
+</div>
+<!-- End Navbar -->
