[Update] PickUp template

--- a/app/assets/stylesheets/public/Top.scss
+++ b/app/assets/stylesheets/public/Top.scss
@@ -1,14 +1,75 @@
 @import "colors";
 @import "dimensions";
 
-.news {
-  .btn-show {
-    margin-top: 23px;
-    margin-bottom: 15px;
-    margin-left: 25px;
-    .btn {
-     font-size: 10px; 
-     background-color: $blue;
+.index-page {
+
+  .news {
+
+    .news-icon {
+      margin-top: 30px;
+      margin-bottom: 15px;
+      margin-right: 10px;
+    }
+
+    .btn-show {
+      margin-top: 23px;
+      margin-bottom: 15px;
+      margin-left: 25px;
+
+      .btn {
+       font-size: 10px;
+       background-color: $blue;
+      }
+    }
+
+    .news-table {
+      color: $gray;
+    }
+
+  }
+
+  .about {
+    background-color: $light_blue;
+    padding: 3em;
+
+    .about-icon {
+      margin-top: 30px;
+      margin-bottom: 15px;
+      margin-right: 10px;
+    }
+
+    .card-index {
+      margin-top: 30px;
+      display: flex;
+      justify-content: space-between;
+    }
+    
+    .account-text {
+      display: flex;
+      justify-content: center;
+    }
+
+    .account-link {
+      display: flex;
+      justify-content: center;
+      .btn {
+        + .btn{
+          margin-left:60px;
+        }
+      }
     }
   }
+
+  .pickup {
+    margin-bottom: 0;
+
+    .pickup-icon {
+      margin-top: 30px;
+      margin-bottom: 15px;
+      margin-right: 10px;
+    }
+
+  }
+
 }
+
