--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -8,15 +8,20 @@
 
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cdc0e6c98c.js" crossorigin="anonymous"></script>
 
     <!-- CSS Files -->
     <link href="/assets/bootstrap.min.css" rel="stylesheet" />
     <link href="/assets/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
 
     <%= stylesheet_link_tag 'public', media: 'all', 'data-turbolinks-track': 'reload' %>
+    
+    <!--JS-->
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+
   </head>
 
   <body>
