--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -16,26 +16,69 @@
         </div>
       </div>
   </div>
-
+  
   <!--News Release-->
-  <div class="container">
-    <div class="row news">
-      <h4>News Release</h4>
-      <div class="btn-show">
-        <button class="btn btn-primary btn-round btn-sm", onclick="scrollToDownload()">一覧を見る</button>
+  <%= render "public/top/tips/news" %>
+
+  <!--About-->
+  <%= render "public/top/tips/about" %>
+  
+   <!-- Nav tabs -->
+    <div class="card pickup">
+      <div class="card-header">
+        <div class="container">
+          <div class="row">
+            <i class="far fa-2x fa-lightbulb pickup-icon"></i>
+            <h4>Pick Up</h4>
+          </div>
+          
+          <div class="row">
+            <ul class="nav nav-tabs justify-content-center" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#thesis" role="tab">
+                  THESIS
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#community" role="tab">
+                  COMMUNITY
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#event" role="tab">
+                  EVENT
+                </a>
+              </li>
+            </ul>
+          </div>
+          
+          
+        </div>
+        
       </div>
-      <table class="table">
-        <tr>
-          <th>LABONITY 開設のお知らせ</th>
-          <td>2021/09/08</td>
-        </tr>
-        <tr>
-          <th>LABONITY 開設のお知らせ2</th>
-          <td>2021/09/08</td>
-        </tr>
-      </table>
+      <div class="card-body">
+        <!-- Tab panes -->
+        <div class="tab-content text-center">
+          <!--panel 1-->
+          <div class="tab-pane active" id="thesis" role="tabpanel">
+            <%= render "public/top/tips/thesis" %>
+          </div>
+          
+          <!--panel 2-->
+          <div class="tab-pane" id="community" role="tabpanel">
+            <%= render "public/top/tips/community" %>
+          </div>
+          
+          <!--panel 3-->
+          <div class="tab-pane" id="event" role="tabpanel">
+            <%= render "public/top/tips/event" %>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
+  
+  
+  
 </div>
 
