--- a/app/assets/stylesheets/public/Top.scss
+++ b/app/assets/stylesheets/public/Top.scss
@@ -18,12 +18,17 @@
 
       .btn {
        font-size: 10px;
-       background-color: $blue;
+       background-color: $orange;
       }
     }
 
     .news-table {
       color: $gray;
+      
+      .news-item {
+        color: $gray;
+      }
+      
     }
 
   }
