--- a/app/views/public/top/tips/_news.html.erb
+++ b/app/views/public/top/tips/_news.html.erb
@@ -10,7 +10,7 @@
 
       <% @news.each do |news| %>
         <tr>
-          <th width="80%"><%= news.title %></th>
+          <th width="80%"><%= link_to news.title, public_news_path(news.id), class:"news-item" %></th>
           <td><%= news.release_at.strftime("%Y/%m/%d") %></td>
         </tr>
       <% end %>
