--- a/app/assets/stylesheets/shared/head.scss
+++ b/app/assets/stylesheets/shared/head.scss
@@ -3,7 +3,7 @@
 
 .per-page {
   .page-head {
-    height: 7vh;
+    height: 80px;
   }
   
   .page-head-image {
@@ -11,7 +11,7 @@
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 7vh;
+    height: 80px;
     z-index: -1;
     opacity : 0.2;
   }
