--- a/app/assets/stylesheets/public/top.scss
+++ b/app/assets/stylesheets/public/top.scss
@@ -19,16 +19,21 @@
       .btn {
        font-size: 10px;
        background-color: $orange;
+
+       .news-index-link {
+         color: white;
+       }
+
       }
     }
 
     .news-table {
       color: $gray;
-      
+
       .news-item {
         color: $gray;
       }
-      
+
     }
 
   }
@@ -48,7 +53,7 @@
       display: flex;
       justify-content: space-between;
     }
-    
+
     .account-text {
       display: flex;
       justify-content: center;
