--- a/app/views/public/top/tips/_news.html.erb
+++ b/app/views/public/top/tips/_news.html.erb
@@ -4,7 +4,9 @@
     <i class="far fa-2x fa-newspaper news-icon"></i>
     <h4>News Release</h4>
     <div class="btn-show">
-      <button class="btn btn-primary btn-round btn-sm", onclick="scrollToDownload()">一覧を見る</button>
+      <button class="btn btn-primary btn-round btn-sm", onclick="scrollToDownload()">
+        <%= link_to "一覧を見る", public_news_index_path, class:"news-index-link" %>
+      </button>
     </div>
     <table class="table news-table">
 
@@ -14,7 +16,7 @@
           <td><%= news.release_at.strftime("%Y/%m/%d") %></td>
         </tr>
       <% end %>
-      
+
     </table>
   </div>
 </div>
