--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -7,5 +7,13 @@
     remote:        data-remote
 -%>
 <span class="first">
-  <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote %>
+  <li class="page-item">
+    <% if current_page.first? %>
+      <span class="page-link"><%= t('views.pagination.first').html_safe %></span>
+    <% else %>
+      <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote, class:"page-link" do %>
+        <span aria-hidden="true"></span>
+      <% end %>
+    <% end %>
+  </li>
 </span>
