--- a/app/assets/stylesheets/public/news.scss
+++ b/app/assets/stylesheets/public/news.scss
@@ -5,16 +5,28 @@
   height: 70vh;
   padding: 50px 0;
   position: relative;
-  
+
   .page-title{
     font-weight: bold;
     margin-left: 10px;
   }
   
+  .page-subtitle{
+    margin-top: 0;
+  }
+
   .news-table {
     .news-item {
       color: $gray;
     }
+  }
+
+  .news-paginate {
+    .news-page-item {
+      display: flex;
+      justify-content: center;
+    }
+   
   }
 }
 
