--- a/app/assets/stylesheets/public/news.scss
+++ b/app/assets/stylesheets/public/news.scss
@@ -39,6 +39,7 @@
   .news-head {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     border-bottom: 1px solid $gray;
     margin-bottom: 20px;
     .news-title {
