--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -1,6 +1,9 @@
 <!--header設定-->
 <%= render "shared/head" %>
 
+<!--flash設定-->
+<%= render "shared/flash" %>
+
 <!--news 一覧-->
 <div class="container index-news">
   
