--- a/app/views/public/news/show.html.erb
+++ b/app/views/public/news/show.html.erb
@@ -1,6 +1,9 @@
 <!--header設定-->
 <%= render "shared/head" %>
 
+<!--flash設定-->
+<%= render "shared/flash" %>
+
 <!--news 詳細-->
 <div class="container per-news">
   <!--タイトルとリリース日-->
