[Update] devise validation

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -6,3 +6,13 @@
 
 <p><%= t('.instruction_2') %></p>
 <p><%= t('.instruction_3') %></p>
+
+
+<p>─────────────────────────────────────────────────────────</p>
+<p>※このメールは送信専用のアドレスより配信しております。</p>
+<p>※恐れ入りますが返信はお控えください。</p>
+<p>─────────────────────────────────────────────────────────</p>
+<p>発行：LABONITY</p>
+<p>このメールの無断転載を禁止します</p>
+<p>Copyright 2021 Shuhei Nara</p>
+<p>─────────────────────────────────────────────────────────</p>
