--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,9 +4,7 @@
 <!--header設定-->
 <%= render "shared/head" %>
 
-<!--flash設定-->
-<%= render "shared/flash" %>
-
+<!--password再設定-->
 <div class="devise-background">
   <div class="container">
     <div class="session-devise">
