--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,11 +4,7 @@
 <!--header設定-->
 <%= render "shared/head" %>
 
-<!--flash設定-->
-<%= render "shared/flash" %>
-
-
-
+<!--新規登録-->
 <div class="devise-background">
   <div class="container">
     <div class="session-devise">
@@ -18,9 +14,9 @@
 
       <div class="row devise-form">
         <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-        
+          
           <%= markup do |m|
-            p = DeviseSignupFormPresenter.new(f, self)
+            p = DeviseFormPresenter.new(f, self)
             
             m << p.text_field_block(:login_id, "ID", {placeholder: "半角英数字で入力してください。"})
             m << p.full_name_block(:family_name, :given_name, "お名前", {placeholder:"姓"}, {placeholder:"名"})
@@ -28,10 +24,10 @@
             m << p.text_field_block(:email, "Eメール", {placeholder: "sample.example.com", type:"email"})
             m << p.password_field_block(:password, "パスワード" + t('devise.shared.minimum_password_length', count: @minimum_password_length), {placeholder: "半角英数字で入力してください"})
             m << p.password_field_block(:password_confirmation, "パスワード (確認用)", {placeholder: "半角英数字で入力してください"})
-            m << p.text_field_block(:post_id, "役職")
+            m << p.text_field_block(:post_id, "学年/役職")
             
           end %>
-
+          
           <div class="actions devise-submit-btn devise-submit-btn--sign_up">
             <%= f.submit t('.sign_up'), class:"btn btn-primary col-6"  %>
           </div>
