--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,8 +1,8 @@
 <% flash.each do |message_type, message| %>
+  <% message_type = flash_treatment(message_type) %>
   <div class="alert alert-<%= "#{message_type}" %>" role="alert">
     <div class="container">
       <div class="alert-icon">
-        <!--<i class="fas fa-exclamation"></i>-->
         <i class="<%= pull_flash_icon(message_type) %>"></i>
       </div>
       <strong><%= pull_flash_title(message_type) %></strong><%= message %>
