--- a/app/views/admins/passwords/new.html.erb
+++ b/app/views/admins/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <!--page名-->
-<% provide(:title,  "パスワードを忘れた方") %>
+<% provide(:title,  "[管理者]パスワードを忘れた方") %>
 
 <!--header設定-->
 <%= render "shared/head" %>
@@ -9,21 +9,21 @@
   <div class="container">
     <div class="session-devise">
       <div class="row devise-title">
-        <h3 class="title_name col-12">パスワードを忘れた方</h3>
+        <h3 class="title_name col-12">管理者パスワードを忘れた場合</h3>
       </div>
 
       <!--<div class="row devise-comment">-->
-        <p class="comment-body">ご登録のemailにパスワード再設定方法をお送りいたします。</p>
+        <p class="comment-body">管理者emailにパスワード再設定方法をお送りいたします。</p>
       <!--</div>-->
 
 
       <div class="row devise-form">
-      <%= form_with model: @user, url: user_password_path, id: 'new_user', class: 'new_user', local: true, method: :post do |f| %>
+      <%= form_with model: @user, url: admin_password_path, id: 'new_user', class: 'new_user', local: true, method: :post do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field">
           <%= f.label :email, class:"label" %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"sample@example.com" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"admin@example.com" %>
         </div>
 
         <div class="actions devise-submit-btn">
@@ -33,10 +33,8 @@
       </div>
 
       <div class="row devise-other-link">
-        <%= link_to "既にアカウントをお持ちの方はこちら", new_session_path(resource_name), class:"col-12" %>
-        <%= link_to "新規アカウントを作成する", new_registration_path(resource_name), class:"col-12" %>
+        <%= link_to "管理者ログイン画面はこちら", new_admin_session_path, class:"col-12" %>
       </div>
-
     </div>
   </div>
 </div>
