--- a/app/views/admins/passwords/edit.html.erb
+++ b/app/views/admins/passwords/edit.html.erb
@@ -1,25 +1,42 @@
-<h2>Change your password</h2>
+<!--page名-->
+<% provide(:title,  "管理者パスワード変更") %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "admins/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+<!--header設定-->
+<%= render "shared/head" %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+<!--flash設定-->
+<%= render "shared/flash" %>
+
+<!--パスワード変更-->
+<div class="devise-background">
+  <div class="container">
+    <div class="session-devise">
+      <div class="row devise-title">
+        <h3 class="title_name col-12">管理者パスワード再設定</h3>
+      </div>
+      
+      <div class="row devise-form">
+        <%= form_with model: @admin, url: user_password_path, id: 'new_user', class: 'new_user', local: true, method: :patch do |f| %>
+        
+          <%= f.hidden_field :reset_password_token %>
+          
+          <%= markup do |m|
+              p = DeviseFormPresenter.new(f, self)
+              m << p.password_field_block(:password, "新パスワード", {placeholder: "半角英数字で入力してください"})
+              m << p.password_field_block(:password_confirmation, "新パスワード(確認)", {placeholder: "半角英数字で入力してください"})
+            end %>
+            
+        
+          <div class="actions devise-submit-btn">
+            <%= f.submit "変更する", class:"btn btn-primary col-6" %>
+          </div>
+        <% end %>
+      </div>
+      
+      <div class="row devise-other-link">
+        <%= link_to "ログイン画面に戻る", new_admin_session_path, class:"col-12" %>
+      </div>
+
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "admins/shared/links" %>
+</div>
