--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,19 +12,15 @@
         <h3 class="title_name col-12">パスワードを忘れた方</h3>
       </div>
 
-      <!--<div class="row devise-comment">-->
         <p class="comment-body">ご登録のemailにパスワード再設定方法をお送りいたします。</p>
-      <!--</div>-->
-
 
       <div class="row devise-form">
       <%= form_with model: @user, url: user_password_path, id: 'new_user', class: 'new_user', local: true, method: :post do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="field">
-          <%= f.label :email, class:"label" %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"sample@example.com" %>
-        </div>
+        <%= markup do |m|
+            p = DeviseFormPresenter.new(f, self)
+            m << p.text_field_block(:email, "Eメール", {placeholder: "sample.example.com", type:"email"})
+          end %>
 
         <div class="actions devise-submit-btn">
           <%= f.submit "送信する", class:"btn btn-primary col-6"  %>
