--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <!--page名-->
-<% provide(:title,  "パスワード") %>
+<% provide(:title,  "[企業管理者]パスワード変更") %>
 
 <!--header設定-->
 <%= render "shared/head" %>
