--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -47,6 +47,11 @@
               <%= link_to "LOGOUT", destroy_admin_session_path, class:"nav-link btn btn-neutral btn-sm btn-login", method: :delete %>
               </a>
             </li>
+          <% elsif company_admin_signed_in? %>
+            <li class="nav-item ">
+              <%= link_to "LOGOUT", destroy_company_admin_session_path, class:"nav-link btn btn-neutral btn-sm btn-login", method: :delete %>
+              </a>
+            </li>
           <% else %>
             <li class="nav-item ">
               <%= link_to "LOGIN", new_user_session_path, class:"nav-link btn btn-neutral btn-sm btn-login" %>
