--- a/app/views/company_admins/passwords/edit.html.erb
+++ b/app/views/company_admins/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <!--page名-->
-<% provide(:title,  "[管理者]パスワード変更") %>
+<% provide(:title,  "[企業管理者]パスワード変更") %>
 
 <!--header設定-->
 <%= render "shared/head" %>
@@ -7,17 +7,15 @@
 <!--flash設定-->
 <%= render "shared/flash" %>
 
-<!--パスワード変更-->
 <div class="devise-background">
   <div class="container">
     <div class="session-devise">
       <div class="row devise-title">
-        <h3 class="title_name col-12">管理者パスワード再設定</h3>
+        <h3 class="title_name col-12">企業管理者パスワード再設定</h3>
       </div>
       
       <div class="row devise-form">
-        <%= form_with model: @admin, url: admin_password_path, id: 'new_user', class: 'new_user', local: true, method: :patch do |f| %>
-        
+        <%= form_with model: @company_admin, url: company_admin_password_path, id: 'new_user', class: 'new_user', local: true, method: :patch do |f| %>
           <%= f.hidden_field :reset_password_token %>
           
           <%= markup do |m|
@@ -25,7 +23,6 @@
               m << p.password_field_block(:password, "新パスワード", {placeholder: "半角英数字で入力してください"})
               m << p.password_field_block(:password_confirmation, "新パスワード(確認)", {placeholder: "半角英数字で入力してください"})
             end %>
-            
         
           <div class="actions devise-submit-btn">
             <%= f.submit "変更する", class:"btn btn-primary col-6" %>
@@ -34,7 +31,7 @@
       </div>
       
       <div class="row devise-other-link">
-        <%= link_to "ログイン画面に戻る", new_admin_session_path, class:"col-12" %>
+        <%= link_to "ログイン画面に戻る", new_company_admin_session_path, class:"col-12" %>
       </div>
 
     </div>
