--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,45 @@
-<h2><%= t('.title', resource: resource.model_name.human) %></h2>
+<!--page名-->
+<% provide(:title,  "登録情報編集") %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<!--header設定-->
+<%= render "shared/head" %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<!--flash設定-->
+<%= render "shared/flash" %>
+
+<!--新規登録-->
+<div class="devise-background">
+  <div class="container">
+    <div class="session-devise">
+      <div class="row devise-title">
+        <h3 class="title_name col-12">登録情報変更</h3>
+      </div>
+
+      <div class="row devise-form">
+        <%= form_with model: @user, url: user_registration_path(@user.login_id), id: 'new_user', class: 'new_user', local: true, method: :patch do |f| %>
+
+          <%= markup do |m|
+            p = DeviseFormPresenter.new(f, self)
+
+            m << p.file_field_block(:profile_image, "Profile Image")
+            m << p.text_field_block(:login_id, "ID", {placeholder: "半角英数字で入力してください。"})
+            m << p.full_name_block(:family_name, :given_name, "お名前", {placeholder:"姓"}, {placeholder:"名"})
+            m << p.full_name_block(:family_name_kana, :given_name_kana, "フリガナ", {placeholder:"セイ"}, {placeholder:"メイ"})
+            m << p.text_field_block(:email, "Eメール", {placeholder: "sample.example.com", type:"email"})
+            m << p.text_field_block(:post_id, "学年/役職")
+
+          end %>
+
+          <div class="actions devise-submit-btn devise-submit-btn--sign_up">
+            <%= f.submit "情報更新", class:"btn btn-primary col-6"  %>
+          </div>
+        <% end %>
+      </div>
+      
+      <div class="row devise-other-link">
+        <%= link_to "マイページに戻る", public_mypage_path(current_user.login_id), class:"col-12" %>
+      </div>
+      
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.update') %>
-  </div>
-<% end %>
-
-<h3><%= t('.cancel_my_account') %></h3>
-
-<p><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %></p>
-
-<%= link_to t('devise.shared.links.back'), :back %>
+</div>
