--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,11 @@
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
     <div class="container">
       <div class="navbar-translate">
-        <%= link_to "LABONITY", public_root_path, class:"navbar-brand" %>
+        <% if user_signed_in? %>
+          <%= link_to "LABONITY", public_mypage_path(current_user.login_id), class:"navbar-brand" %>
+        <% else %>
+          <%= link_to "LABONITY", public_root_path, class:"navbar-brand" %>
+        <% end %>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar top-bar"></span>
           <span class="navbar-toggler-bar middle-bar"></span>
@@ -32,11 +36,26 @@
               </a>
             </div>
           </li>
-          <li class="nav-item ">
-            <%= link_to "SIGNUP", new_user_registration_path, class:"nav-link btn btn-neutral btn-sm btn-login" %>
-            </a>
-          </li>
           
+          <!--SIGNUP/Mypage-->
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to public_mypage_path(current_user.login_id) do %>
+                <% if current_user.profile_image.attached? %>
+                  <td><%= image_tag current_user.profile_image, class:"rounded", size:"50x50"%></td>
+                <% else %>
+                  <td><%= image_tag '/assets/shared/no_image.jpg', class:"rounded", size:"50x50" %></td>
+                <% end %>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="nav-item ">
+              <%= link_to "SIGNUP", new_user_registration_path, class:"nav-link btn btn-neutral btn-sm btn-login" %>
+              </a>
+            </li>
+          <% end %>
+          
+          <!--LOGIN/LOGOUT-->
           <% if user_signed_in? %>
             <li class="nav-item ">
               <%= link_to "LOGOUT", destroy_user_session_path, class:"nav-link btn btn-neutral btn-sm btn-login", method: :delete %>
