--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -17,10 +17,12 @@
     <%= stylesheet_link_tag 'public', media: 'all', 'data-turbolinks-track': 'reload' %>
     
     <!--JS-->
+    <%= javascript_pack_tag 'rss_react' %>   
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    
 
   </head>
 
