--- a/app/views/admin/top/index.html.erb
+++ b/app/views/admin/top/index.html.erb
@@ -1,2 +1,7 @@
-<% provide(:title,  "管理者") %>
-<h1><%= '管理者TOP' %></h1>
+<% provide(:title,  "管理者Top") %>
+
+<!--header設定-->
+<%= render "shared/head" %>
+
+<!--flash設定-->
+<%= render "shared/flash" %>
