--- a/app/views/layouts/company_admin.html.erb
+++ b/app/views/layouts/company_admin.html.erb
@@ -14,7 +14,7 @@
     <link href="/assets/bootstrap.min.css" rel="stylesheet" />
     <link href="/assets/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
 
-    <%= stylesheet_link_tag 'public', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'company_admin', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     
   </head>
