--- a/app/assets/stylesheets/admin/_colors.scss
+++ b/app/assets/stylesheets/admin/_colors.scss
@@ -4,6 +4,6 @@ $light_blue: #BAE1DE;
 $orange: #F9A03F;
 
 /* font-color */
-$black: #131515;
-$gray: #39393A;
+$black: #333;
+$gray: #717171;
 $dark_green: #0B3C49;
