--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -4,10 +4,10 @@
   *= require_tree ./public
  */
 
-@font-face {
-  font-family: 'nucleo-outline';
-  src: url(font-path('nucleo-outline.eot'));
-  src: url(font-path('nucleo-outline.woff2')) format('woff2'),
-       url(font-path('nucleo-outline.woff')) format('woff'),
-       url(font-path('nucleo-outline.ttf')) format('truetype');
-}
+/*@font-face {*/
+/*  font-family: 'nucleo-outline';*/
+/*  src: url(font-path('nucleo-outline.eot'));*/
+/*  src: url(font-path('nucleo-outline.woff2')) format('woff2'),*/
+/*       url(font-path('nucleo-outline.woff')) format('woff'),*/
+/*       url(font-path('nucleo-outline.ttf')) format('truetype');*/
+/*}*/
