--- a/app/views/public/users/tips/mypage/_rss.html.erb
+++ b/app/views/public/users/tips/mypage/_rss.html.erb
@@ -5,7 +5,7 @@
         <% @rsses.each_with_index do |rss, idx| %>
           <% if rss.users.include?(current_user) %>
             <li class="nav-item">
-              <a class="rss-btn nav-link <%= "active" if idx == 0 %>" data-toggle="tab" href="#<%= rss.name.gsub(" ", "") %>" role="tab"><%= rss.name %></a>
+              <a class="rss-btn nav-link <%= "active" if idx == 0 %>" data-toggle="tab" href="#<%= rss.name.gsub(" ", "") %>" role="tab"><%= rss.name.truncate(15) %></a>
             </li>
           <% end %>
         <% end %>
@@ -16,7 +16,8 @@
       <div class="tab-content text-center">
         <% @rsses.each_with_index do |rss, idx| %>
           <% if rss.users.include?(current_user) %>
-            <div class="tab-pane active" id="<%= rss.name.gsub(" ", "") %>" role="tabpanel">
+            <div class="tab-pane <%= "active" if idx == 0 %>" id="<%= rss.name.gsub(" ", "") %>" role="tabpanel">
+              <p class="rss-title-detail"><%= rss.name %></p>
               <div id="rss<%= idx+1 %>"></div>
             </div>
           <% end %>
