--- a/app/assets/stylesheets/devise/devise.scss
+++ b/app/assets/stylesheets/devise/devise.scss
@@ -92,6 +92,11 @@
         width: 100%;
         padding: 4px 8px;
         }
+        
+        select {
+        width: 100%;
+        padding: 4px 8px;
+        }
 
         .foget-password-link {
           display: flex;
