--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
             m << p.text_field_block(:email, "Eメール", {placeholder: "sample.example.com", type:"email"})
             m << p.password_field_block(:password, "パスワード" + t('devise.shared.minimum_password_length', count: @minimum_password_length), {placeholder: "半角英数字で入力してください"})
             m << p.password_field_block(:password_confirmation, "パスワード (確認用)", {placeholder: "半角英数字で入力してください"})
-            m << p.text_field_block(:post_id, "学年/役職")
+            m << p.collection_select_block(:post_id, "学年/役職", Post.all, :id, :name)
             
           end %>
           
