--- a/app/views/public/users/tips/show/_profile.html.erb
+++ b/app/views/public/users/tips/show/_profile.html.erb
@@ -24,7 +24,7 @@
       <th width="30%">所属</th><td>ooo</td>
     </tr>
     <tr>
-      <th>学年/役職</th><td>ooo</td>
+      <th>学年/役職</th><td><%= @user.post.name %></td>
     </tr>
     <tr>
       <th>論文数</th><td>ooo</td>
