--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -17,6 +17,7 @@
     <%= stylesheet_link_tag 'public', media: 'all', 'data-turbolinks-track': 'reload' %>
     
     <!--JS-->
+    <%= javascript_pack_tag 'rss_react' %>  
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
@@ -28,6 +29,7 @@
     <div id="wrapper">
       <%= render "shared/header" %>
       <div id="container">
+        <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
         <%= yield %>
       </div>
       <%= render "shared/footer" %>
@@ -38,18 +40,18 @@
 <!-- Plugins -->
 
 <!--   Core JS Files   -->
-<script src="assets/core/jquery.min.js" type="text/javascript"></script>
-<script src="assets/core/popper.min.js" type="text/javascript"></script>
-<script src="assets/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="/assets/core/jquery.min.js" type="text/javascript"></script>
+<script src="/assets/core/popper.min.js" type="text/javascript"></script>
+<script src="/assets/core/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="assets/plugins/bootstrap-switch.js"></script>
+<script src="/assets/plugins/bootstrap-switch.js"></script>
 
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/plugins/nouislider.min.js" type="text/javascript"></script>
+<script src="/assets/plugins/nouislider.min.js" type="text/javascript"></script>
 
 <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<script src="assets/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="/assets/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
 
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="assets/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
+<script src="/assets/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
