--- a/app/assets/stylesheets/now-ui-kit.css
+++ b/app/assets/stylesheets/now-ui-kit.css
@@ -1680,7 +1680,7 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 }
 
 .btn-primary {
-  background-color: #F9A03F;
+  background-color: #f96332;
   color: #FFFFFF;
 }
 
@@ -2161,7 +2161,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
   background-color: #FFFFFF;
-  color: #F9A03F;
+  color: #f96332;
 }
 
 .btn-neutral:hover,
@@ -3543,10 +3543,6 @@ h3,
   line-height: 1.4em;
 }
 
-.welcome-text h3 {
-  margin-bottom: 0;
-}
-
 h4,
 .h4 {
   font-size: 1.5em;
@@ -3897,13 +3893,13 @@ Created using IcoMoon - icomoon.io
 
 -------------------------------- */
 
-/*@font-face {*/
-/*  font-family: 'Nucleo Outline';*/
-/*  src: url("../fonts/nucleo-outline.eot");*/
-/*  src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");*/
-/*  font-weight: normal;*/
-/*  font-style: normal;*/
-/*}*/
+@font-face {
+  font-family: 'Nucleo Outline';
+  src: url("../fonts/nucleo-outline.eot");
+  src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 /*------------------------
 	base class definition
@@ -4638,7 +4634,7 @@ Created using IcoMoon - icomoon.io
 
 .navbar .navbar-toggler .navbar-toggler-bar.middle-bar {
   width: 17px;
-  /*transition: width .2s linear;*/
+  transition: width .2s linear;
 }
 
 .navbar .navbar-toggler:hover .navbar-toggler-bar.middle-bar {
@@ -4685,7 +4681,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .bg-primary {
-  background-color: #59C2D8 !important;
+  background-color: #f96332 !important;
 }
 
 .bg-info {
@@ -5607,11 +5603,11 @@ img {
 }
 
 .index-page .page-header {
-  height: 50vh;
+  height: 125vh;
 }
 
 .index-page .page-header .container>.content-center {
-  /*top: 37%;*/
+  top: 37%;
 }
 
 .index-page .page-header .category-absolute {
@@ -5984,7 +5980,7 @@ img {
 }
 
 .page-header {
-  min-height: 50vh;
+  min-height: 100vh;
   max-height: 999px;
   padding: 0;
   color: #FFFFFF;
@@ -6020,7 +6016,6 @@ img {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity : 0.2;
 }
 
 .page-header .content-center {
@@ -6073,16 +6068,16 @@ img {
   display: none;
 }
 
-.clear-filter[filter-color="blue"] {
+.clear-filter[filter-color="orange"] {
   background: rgba(44, 44, 44, 0.2);
   /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(89, 194, 216, 0.6));
+  background: -webkit-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
   /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(89, 194, 216, 0.6));
+  background: -o-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
   /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(89, 194, 216, 0.6));
+  background: -moz-linear-gradient(90deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
   /* For Firefox 3.6 to 15 */
-  background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(89, 194, 216, 0.6));
+  background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
   /* Standard syntax */
 }
 
@@ -6517,7 +6512,7 @@ img {
     /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#f96332 0%, #000 80%);
     /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#BAE1DE 0%, #000 80%);
+    background: linear-gradient(#f96332 0%, #000 80%);
     /* Standard syntax (must be last) */
     opacity: 0.76;
     filter: alpha(opacity=76);
