--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <%= javascript_pack_tag 'rss_react' %>
+</head>
+
 <!--header設定-->
 <%= render "shared/head" %>
 
@@ -57,7 +61,7 @@
             <i class="fas fa-2x fa-rss user-content-icon"></i>
             <h3>論文 RSS</h3>
           </div>
-          
+
           <%= link_to "RSS登録はこちら", public_user_rsses_path(user_login_id: params[:login_id]), class:"rss-register-link" %>
           <%= render "public/users/tips/mypage/rss" %>
         </div>
@@ -78,12 +82,12 @@
         <div class="row timecard-row">
           <%= render "public/users/tips/mypage/timecard" %>
         </div>
-        
+
         <!--News-->
         <div class="row news-row">
           <%= render "public/users/tips/mypage/news" %>
         </div>
-        
+
         <!--Event-->
         <div class="row">
           <%= render "public/users/tips/mypage/function" %>
