--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -8,7 +8,7 @@
       <h2 class="error-name">403 Forbidden</h2>
       
       <div class="error-img">
-        <img src="/assets/shared/errors/error_403.jpg" alt="エラー医師">
+        <div class="error-image-403"></div>
       </div>
       
       <p>
