--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -8,7 +8,7 @@
       <h2 class="error-name">404 Not Found</h2>
       
       <div class="error-img">
-        <img src="/assets/shared/errors/error_404.jpg" alt="エラー忍者">
+        <div class="error-image-404"></div>
       </div>
       
       <p>指定されたページは見つかりません。</p>
