--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -8,7 +8,7 @@
       <h2 class="error-name">500 Internal Server Error</h2>
       
       <div class="error-img">
-        <img src="/assets/shared/errors/error_500.jpg" alt="エラー博士">
+        <div class="error-image-500"></div>
       </div>
       
       <p>申し訳ございません。システムエラーが発生しました。</p>
