--- a/app/views/errors/unprocessable_entity.html.erb
+++ b/app/views/errors/unprocessable_entity.html.erb
@@ -8,7 +8,7 @@
       <h2 class="error-name">422 Unprocessable Eentity</h2>
       
       <div class="error-img">
-        <img src="/assets/shared/errors/error_404.jpg" alt="エラー忍者">
+        <div class="error-image-404"></div>
       </div>
       
       <p>指定されたページは表示できません。</p>
