--- a/app/views/public/top/tips/_about.html.erb
+++ b/app/views/public/top/tips/_about.html.erb
@@ -78,11 +78,12 @@
         <div class="col-12 account-text">
           <p>これらの機能を使うためには今すぐ SIGNUP ！</p>
         </div>
-        <div class="col-12 account-link">
+        <div class="col-md-6 account-link">
           <a href="#" class="btn btn-primary btn-lg">個人の方はこちら</a>
+        </div>
+        <div class="col-md-6 account-link">
           <a href="#" class="btn btn-primary btn-lg">企業の方はこちら</a>
         </div>
-
       </div>
     </div>
   </div>
