--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -24,7 +24,7 @@
   <div class="row">
 
     <!--User Info-->
-    <div class="col-2 user-info">
+    <div class="col-md-2 user-info">
 
       <div class="container">
         <!--User Profile-->
@@ -46,7 +46,7 @@
     </div>
 
     <!--Rss-->
-    <div class="col-8">
+    <div class="col-md-8">
       <div class="container user-content">
         <!--研究室からのお知らせ-->
         <div class="row">
@@ -76,7 +76,7 @@
     </div>
 
     <!--labonity func-->
-    <div class="col-2">
+    <div class="col-md-2">
       <div class="container labonity-function">
         <!--Time Card-->
         <div class="row timecard-row">
