--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -12,15 +12,15 @@
   
   <div class="row">
     <!--Paper-->
-    <div class="col-4 ">
+    <div class="col-md-4 ">
       <%= render "public/users/tips/show/papers" %>
     </div>
     <!--Presentation-->
-    <div class="col-4">
+    <div class="col-md-4">
       <%= render "public/users/tips/show/presentations" %>
     </div>
     <!--Books-->
-    <div class="col-4">
+    <div class="col-md-4">
       <%= render "public/users/tips/show/books" %>
     </div>
   </div>
