--- a/app/views/public/rsses/index.html.erb
+++ b/app/views/public/rsses/index.html.erb
@@ -17,7 +17,7 @@
       <!--validation設定-->
       <div id="rss-validation-error"></div>
 
-      <table class="table rss-table">
+      <table class="table table-responsive rss-table">
         <thead>
           <tr>
             <th class="col-2">Name</th> <th class="col-8">Introduction</th> <th class="col-2">RSS登録</th>
