--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -12,17 +12,22 @@
     <%= render "public/communities/tips/show/profile" %>
   </div>
   
-  <div class="row community-news">
-    <i class="far fa-2x fa-newspaper news-icon"></i>
-    <h3 class="page-title">Community News</h3>
+  <div class="row">
+    <div class="col-12 community-flex">
+      <i class="far fa-2x fa-newspaper community-icon"></i>
+      <h3 class="page-title">Community News</h3>
+    </div>
+    
   </div>
   
-  <div class="row community-main">
-    <div class="col-md-2">
-      <i class="fas fa-users"></i>
+  <div class="row community-main community-icon">
+    <div class="col-md-2 community-flex">
+      <i class="fas fa-2x fa-users"></i>
+      <h4>User</h4>
     </div>
-    <div class="col-md-10">
-      
+    <div class="col-md-10 community-flex">
+      <i class="far fa-2x fa-comments community-icon"></i>
+      <h4>Messages</h4>
     </div>
     
   </div>
