--- a/app/views/public/users/tips/mypage/_function.html.erb
+++ b/app/views/public/users/tips/mypage/_function.html.erb
@@ -7,7 +7,7 @@
   <table>
     <tr>
       <td width="30%"><i class="fas fa-lg fa-vial"></i></td>
-      <td><%= link_to "研究室を探す" , public_root_path, class:"search-link"%></td>
+      <td><%= link_to "研究室を探す" , public_laboratories_path, class:"search-link"%></td>
     </tr>
     
     <tr>
