--- a/app/views/public/laboratories/member.html.erb
+++ b/app/views/public/laboratories/member.html.erb
@@ -8,9 +8,11 @@
 <%= render "public/laboratories/tips/menu" %>
 
 <div class="container container-page">
-  <div class="row rowbox content-title">
-    <i class="fas fa-3x fa-vial icon"></i>
-    <h2 class="page-title">Member 一覧</h2>
+  <div class="row rowbox content-top">
+    <div class="content-title">
+      <i class="fas fa-3x fa-users icon"></i>
+      <h2 class="content-title-name">Member 一覧</h2>
+    </div>
   </div>
 
   <div class="row rowbox">
