--- a/app/views/public/laboratories/show.html.erb
+++ b/app/views/public/laboratories/show.html.erb
@@ -13,12 +13,12 @@
 
 <div class="container container-page">
   <!--About-->
-  <div class="row rowbox about">
+  <div class="row rowbox about content-top">
     <%= render "public/laboratories/tips/show/about" %>
   </div>
 
   <!--Press Release-->
-  <div class="row rowbox press-release">
+  <div class="row rowbox press-release content-top">
     <%= render "public/laboratories/tips/show/press_release" %>
   </div>
 </div>
