--- a/app/views/public/laboratories/tips/_menu.html.erb
+++ b/app/views/public/laboratories/tips/_menu.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "Member", public_laboratory_member_path(@set_laboratory.id), class:"nav-link" %>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Paper</a>
+      <%= link_to "Paper", public_laboratory_papers_path(@set_laboratory.id), class:"nav-link" %>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Confernce</a>
